# esp-benq-projector-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
components/rapidjson/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_rainmaker.c  app_status.c  app_wifi.c  app_wifi.h  benq_proj.c  benq_proj.h  device_state.c  device_state.h  hw_config.cpp  hw_config.h  main.cpp  setup_aws_iot.c  setup_status_led.c  setup_wifi.c
src/: main.cpp
